[frontend] fix layout issue with the footer

--- a/web/vueapp/src/assets/style/_overrides.scss
+++ b/web/vueapp/src/assets/style/_overrides.scss
@@ -90,7 +90,8 @@ h6 {
 }
 
 .el-footer {
-  flex-grow: 0;
+  flex-grow: 1;
+  max-height: fit-content;
 }
 
 .footer {
